--- a/templates/index.html
+++ b/templates/index.html
@@ -158,7 +158,7 @@
   <div class="container">
     <div class="row align-items-center g-5">
       <div class="col-md-6" data-aos="fade-right">
-        <img src="https://cdn-icons-png.flaticon.com/512/4329/4329687.png" alt="About PolyPulse" class="img-fluid rounded-4 shadow">
+        <img src="../static/img/about.jpg" alt="About PolyPulse" class="img-fluid rounded-4 shadow w-90">
       </div>
       <div class="col-md-6" data-aos="fade-left" data-aos-delay="100">
         <h3 class="fw-bold mb-3">About PolyPulse</h3>
