--- a/templates/nav.html
+++ b/templates/nav.html
@@ -61,7 +61,7 @@
 
         {% if session.get('user_id') %}
 <li class="nav-item dropdown">
-  <a class="nav-link dropdown-toggle" href="#" id="accountDropdown" role="button" data-bs-toggle="dropdown">
+  <a class="nav-link dropdown-toggle" href="" id="accountDropdown" role="button" data-bs-toggle="dropdown">
     Account
   </a>
   <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="accountDropdown">
@@ -73,7 +73,7 @@
 </li>
         {% else %}
 <li class="nav-item dropdown">
-  <a class="nav-link dropdown-toggle" href="#" id="accountDropdown" role="button" data-bs-toggle="dropdown">
+  <a class="nav-link dropdown-toggle" href="" id="accountDropdown" role="button" data-bs-toggle="dropdown">
     Account
   </a>
   <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="accountDropdown">
