--- a/templates/login.html
+++ b/templates/login.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Login - PolyPulse</title>
+  <title>PolyPulse | Login</title>
   <link rel="icon" href="{{ url_for('static', filename='favicon.png') }}" type="image/x-icon" />
 <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@600&display=swap" rel="stylesheet">
 
