--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>PolyPulse - Emotional Insight AI</title>
+  <title>PolyPulse | Emotional Insight AI</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Bootstrap CSS -->
@@ -158,7 +158,7 @@
   <div class="container">
     <div class="row align-items-center g-5">
       <div class="col-md-6" data-aos="fade-right">
-        <img src="../static/img/about.jpg" alt="About PolyPulse" class="img-fluid rounded-4 shadow w-90">
+        <img src="about.jpg" alt="About PolyPulse" class="img-fluid rounded-4 shadow">
       </div>
       <div class="col-md-6" data-aos="fade-left" data-aos-delay="100">
         <h3 class="fw-bold mb-3">About PolyPulse</h3>
